Fixing css column layout issues

--- a/src/Client/Pages/Reader.razor.css
+++ b/src/Client/Pages/Reader.razor.css
@@ -1,7 +1,6 @@
-.reader {
+﻿.reader {
   position: relative;
   height: 100%;
-  overflow: hidden;
 }
 
 .reader-hidden {
@@ -19,7 +18,10 @@
   transition: transform 0.1s ease;
   box-sizing: border-box;
   width: 100%;
+  height: 100px;
+  column-count: 1;
   column-gap: 2rem;
+  column-fill: auto;
   user-select: none;
   cursor: default;
   bottom: 0;
